--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "bootswatch": "^5.2.1",
     "sass": "^1.54.8"
   },
   "scripts": {
